unpackaged/objects/ImportantCase__c.object
<CustomObject>
    <fields>
        <fullName>AcReceiptTanto__c</fullName>
        <label>AC受付者</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccidentDate__c</fullName>
        <label>事故日付</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AccidentNaiyo__c</fullName>
        <label>事故内容</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccidentPlace__c</fullName>
        <label>事故発生地</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccidentSicknessKubun__c</fullName>
        <label>傷病区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>呼吸道感染</fullName>
                </value>
                <value>
                    <fullName>消化器疾患</fullName>
                </value>
                <value>
                    <fullName>耳鼻科疾患</fullName>
                </value>
                <value>
                    <fullName>眼科疾患</fullName>
                </value>
                <value>
                    <fullName>脳疾患</fullName>
                </value>
                <value>
                    <fullName>外傷損傷</fullName>
                </value>
                <value>
                    <fullName>疾病としての損傷、骨折</fullName>
                </value>
                <value>
                    <fullName>高血圧</fullName>
                </value>
                <value>
                    <fullName>虫垂炎腹膜炎</fullName>
                </value>
                <value>
                    <fullName>循環器疾患（高血圧以外）</fullName>
                </value>
                <value>
                    <fullName>産婦人科（妊娠以外）</fullName>
                </value>
                <value>
                    <fullName>妊娠</fullName>
                </value>
                <value>
                    <fullName>泌尿器疾患</fullName>
                </value>
                <value>
                    <fullName>皮膚科疾患</fullName>
                </value>
                <value>
                    <fullName>性病</fullName>
                </value>
                <value>
                    <fullName>糖尿病</fullName>
                </value>
                <value>
                    <fullName>整形外科</fullName>
                </value>
                <value>
                    <fullName>歯科疾病</fullName>
                </value>
                <value>
                    <fullName>伝染病（肝炎除く）</fullName>
                </value>
                <value>
                    <fullName>肝炎系</fullName>
                </value>
                <value>
                    <fullName>予防接種</fullName>
                </value>
                <value>
                    <fullName>健康診断</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>年齢</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseNo__c</fullName>
        <label>CASE NO</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyTanto__c</fullName>
        <label>企業側案件担当者</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoveringInsuranceNote__c</fullName>
        <label>付保内容（保険金額）</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DPNote__c</fullName>
        <label>DP使用欄</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DPTanto__c</fullName>
        <label>DP担当</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>役職</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeadquartersEigyoTanto__c</fullName>
        <label>（親会社情報）営業担当</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HospitalName__c</fullName>
        <label>病院名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HospitalizationDateFrom__c</fullName>
        <label>入院期間(FROM)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HospitalizationDateTo__c</fullName>
        <label>入院期間(TO)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HospitalizationDays__c</fullName>
        <formula>IF ( AND(  ISNULL(HospitalizationDateFrom__c)  = FALSE , ISNULL( HospitalizationDateTo__c )  = FALSE) , (HospitalizationDateTo__c - HospitalizationDateFrom__c) + 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>入院日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImportantCase__c</fullName>
        <label>重大ケース区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>入院</fullName>
                </value>
                <value>
                    <fullName>搬送</fullName>
                </value>
                <value>
                    <fullName>遺体搬送</fullName>
                </value>
                <value>
                    <fullName>現地火葬</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsuranceCompany__c</fullName>
        <label>保険会社</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceContractant__c</fullName>
        <label>保険契約者</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceDateFrom__c</fullName>
        <label>保険期間(FROM)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InsuranceDateTo__c</fullName>
        <label>保険期間(TO)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InsuranceReport__c</fullName>
        <label>保険報告</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KinmuCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>勤務先会社</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>重大ケース</relationshipLabel>
        <relationshipName>ImportantCase1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MdSrvDepNote__c</fullName>
        <label>医サ部使用欄</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MedicalServiceTanto__c</fullName>
        <label>医療サービス担当</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberKubun__c</fullName>
        <label>会員区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>会員</fullName>
                </value>
                <value>
                    <fullName>非会員</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaySituation__c</fullName>
        <label>精算状況</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>対応中</fullName>
                </value>
                <value>
                    <fullName>完了</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PolicyNumber__c</fullName>
        <label>証券番号</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesDepNote__c</fullName>
        <label>営業部使用欄</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>性別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>男</fullName>
                </value>
                <value>
                    <fullName>女</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SituationKubun__c</fullName>
        <label>対応状況</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>対応中</fullName>
                </value>
                <value>
                    <fullName>完了</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ToujishaKubun__c</fullName>
        <label>当事者区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>駐在員</fullName>
                </value>
                <value>
                    <fullName>出張者</fullName>
                </value>
                <value>
                    <fullName>妻</fullName>
                </value>
                <value>
                    <fullName>子供</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Toujisha__c</fullName>
        <label>当事者（被保険者）</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WbEigyoTanto__c</fullName>
        <label>WB営業担当</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>重大ケース</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AccidentDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>IC{00000}</displayFormat>
        <label>重大ケース番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>